--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "devDependencies": {
     "grunt": "~0.4.4",
     "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-sass": "~0.7.3",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-sync": "~0.0.7",
     "matchdep": "^0.3.0"
   },
   "scripts": {
